[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/universal_font_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://management/word_creation.gd" type="Script" id=2]
[ext_resource path="res://assets/theme/transparent_panel_rounded_corner.tres" type="StyleBox" id=3]

[node name="word_creation" type="Control"]
anchor_left = 0.01
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.99
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="background"]
anchor_left = 0.02
anchor_top = 0.03
anchor_right = 0.98
anchor_bottom = 0.9
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="background/ScrollContainer"]
margin_right = 1204.0
margin_bottom = 600.0
rect_min_size = Vector2( 1204, 0 )

[node name="title" type="Label" parent="background/ScrollContainer/VBoxContainer"]
margin_top = -1.0
margin_right = 1204.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 84 )
custom_fonts/font = ExtResource( 1 )
text = "Gestion de mots"
align = 1
valign = 1

[node name="word" type="Control" parent="background/ScrollContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 1204.0
margin_bottom = 152.0
rect_min_size = Vector2( 0, 64 )

[node name="word" type="LineEdit" parent="background/ScrollContainer/VBoxContainer/word"]
anchor_right = 0.75
custom_fonts/font = ExtResource( 1 )
text = "Entrez votre mot ici"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="find" type="Button" parent="background/ScrollContainer/VBoxContainer/word"]
anchor_left = 0.8
anchor_right = 1.0
margin_top = 1.41422
margin_bottom = 45.4142
custom_fonts/font = ExtResource( 1 )
text = "Trouver"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="TextureRect" parent="background/ScrollContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 1204.0
margin_bottom = 396.0
rect_min_size = Vector2( 0, 240 )
expand = true
stretch_mode = 6

[node name="phonetic" type="Control" parent="background/ScrollContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 1204.0
margin_bottom = 464.0
rect_min_size = Vector2( 0, 64 )

[node name="info" type="Label" parent="background/ScrollContainer/VBoxContainer/phonetic"]
anchor_top = 0.2
anchor_right = 0.15
anchor_bottom = 0.2
custom_fonts/font = ExtResource( 1 )
text = "Phon√©tique: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="phonetic" type="Button" parent="background/ScrollContainer/VBoxContainer/phonetic"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
rect_min_size = Vector2( 0, 44 )
custom_fonts/font = ExtResource( 1 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nbSyllable" type="Control" parent="background/ScrollContainer/VBoxContainer"]
margin_top = 468.0
margin_right = 1204.0
margin_bottom = 532.0
rect_min_size = Vector2( 0, 64 )

[node name="info" type="Label" parent="background/ScrollContainer/VBoxContainer/nbSyllable"]
anchor_top = 0.2
anchor_right = 0.3
anchor_bottom = 0.2
custom_fonts/font = ExtResource( 1 )
text = "Nombre de syllable: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nbSyllable" type="Label" parent="background/ScrollContainer/VBoxContainer/nbSyllable"]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
rect_min_size = Vector2( 0, 38 )
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="syllableStruct" type="Control" parent="background/ScrollContainer/VBoxContainer"]
margin_top = 536.0
margin_right = 1204.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 64 )

[node name="info" type="Label" parent="background/ScrollContainer/VBoxContainer/syllableStruct"]
anchor_top = 0.2
anchor_right = 0.3
anchor_bottom = 0.2
custom_fonts/font = ExtResource( 1 )
text = "Structure syllabique: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="syllableStruct" type="Label" parent="background/ScrollContainer/VBoxContainer/syllableStruct"]
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 0.2
rect_min_size = Vector2( 0, 38 )
custom_fonts/font = ExtResource( 1 )

[node name="save" type="Button" parent="background"]
anchor_left = 0.3
anchor_top = 0.92
anchor_right = 0.7
anchor_bottom = 0.98
margin_bottom = 1.664
rect_min_size = Vector2( 0, 44 )
custom_fonts/font = ExtResource( 1 )
text = "Enregistrer"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="background/ScrollContainer/VBoxContainer/word/word" to="." method="_find_word"]
[connection signal="pressed" from="background/ScrollContainer/VBoxContainer/word/find" to="." method="_find_word"]
[connection signal="pressed" from="background/save" to="." method="_on_save_pressed"]
